--- a/client/package.json
+++ b/client/package.json
@@ -2,21 +2,36 @@
   "name": "recipe-front-end",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "dependencies": {
+    "@types/react-router": "^5.1.20",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^1.6.7",
+    "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "@types/react-dom": "^18.2.13",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "http-proxy-middleware": "^2.0.6",
-    "jsonwebtoken": "^8.5.1",
     "node-polyfill-webpack-plugin": "^2.0.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^1.5.2",
-    "react-dom": "^18.2.0",
-    "react-lazy-load-image-component": "^1.5.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1"
+    "prettier": "^3.0.3",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
