--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      - name: Set up Git user information
+        run: |
+          git config user.email "thaihayden@gmail.com"
+          git config user.name "Hayden Thai"
+
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
