--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           git config user.email "thaihayden@gmail.com"
           git config user.name "Hayden Thai"
 
-      - name: Install Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
@@ -28,10 +28,12 @@ jobs:
         run: npm install
         working-directory: ./client  # Navigate to your React app folder
 
-      - name: Build & Deploy
-        run: |
-          npm run build
-          npm run deploy
+      - name: Build
+        run: npm run build
         working-directory: ./client  # Navigate to your React app folder
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./client/build  # Replace with the directory containing your built app
