--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ permissions:
   pages: write
   id-token: write
 
+env:
+  REACT_APP_SPOONACULAR_API_KEY: ${{ secrets.REACT_APP_SPOONACULAR_API_KEY }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,9 +31,11 @@ jobs:
           cd client
           npm install
           npm run build
+        env:
+          REACT_APP_SPOONACULAR_API_KEY: ${{ env.REACT_APP_SPOONACULAR_API_KEY }}
 
       - name: Upload build artifacts
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
           name: build
           path: client/build/
