--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           cd client
           npm install
+          echo "REACT_APP_SPOONACULAR_API_KEY=${{ secrets.REACT_APP_SPOONACULAR_API_KEY }}" > .env.production
           npm run build
         env:
           REACT_APP_SPOONACULAR_API_KEY: ${{ secrets.REACT_APP_SPOONACULAR_API_KEY }}
