--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/react-dom": "^18.2.13",
@@ -27,12 +27,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.0.0",
     "http-proxy-middleware": "^2.0.6",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "prettier": "^3.0.3",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5",
-    "gh-pages": "^6.0.0"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
