--- a/.github/workflows/deployToGithubPages.yml
+++ b/.github/workflows/deployToGithubPages.yml
@@ -26,9 +26,9 @@ jobs:
         run: |
           cd client
           npm install
-          npm run test
+          npm run test --passWithNoTests
           npm run build
-        
+
 
       - name: Upload build artifacts
         uses: actions/upload-pages-artifact@v1
