--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,18 @@
 asgiref==3.7.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
 Django==4.2.5
+django-cors-headers==4.3.1
+djangorestframework==3.14.0
+idna==3.6
+mypy==1.7.1
+mypy-extensions==1.0.0
 pathlib==1.0.1
+pep8==1.7.1
+psycopg2==2.9.9
+pytz==2023.3.post1
+requests==2.31.0
 sqlparse==0.4.4
+tomli==2.0.1
 typing_extensions==4.8.0
+urllib3==2.1.0
