--- a/.github/workflows/discord-notification.yml
+++ b/.github/workflows/discord-notification.yml
@@ -36,7 +36,7 @@ jobs:
           const embed = new MessageEmbed()
             .setColor('#0099ff')
             .setTitle('New Pull Request Created')
-            .setDescription(`A new pull request has been created by ${prData.pull_request.user.login}`)
+            .setDescription('A new pull request has been created by ' + prData.pull_request.user.login)
             .addField('Title', prData.pull_request.title, true)
             .addField('Repository', prData.repository.full_name, true)
             .addField('Branch', prData.pull_request.head.ref, true)
