--- a/.github/workflows/discord-notification.yml
+++ b/.github/workflows/discord-notification.yml
@@ -1,9 +1,9 @@
-name: Discord Notification
+name: Discord Notification on Commit
 
 on:
-  pull_request:
-    types:
-      - opened
+  push:
+    branches:
+      - main  # Replace 'main' with the name of your base branch
 
 jobs:
   notify:
@@ -11,40 +11,43 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
+          ref: main
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: false
+          fetch-depth: 0
+          node-version: 16  # Set the Node.js version here
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: 16  # Set the Node.js version here
 
       - name: Install dependencies
         run: npm install discord.js
 
-      - name: Send Discord Message
+      - name: Send Discord Notification on Commit
         run: |
           node - <<EOF
-          const { WebhookClient, MessageEmbed } = require('discord.js');
+            const { WebhookClient, MessageEmbed } = require('discord.js');
 
-          const webhook = new WebhookClient({
-            url: process.env.DISCORD_WEBHOOK_URL,
-          });
+            const webhook = new WebhookClient({
+              url: process.env.DISCORD_WEBHOOK_URL,
+            });
 
-          const mention = process.env.DISCORD_MENTION || '';
-          const pr = process.env.GITHUB_EVENT_PATH;
-          const prData = require(pr);
+            const commit = process.env.GITHUB_SHA.substring(0, 7);
+            const repoName = process.env.GITHUB_REPOSITORY;
+            const branchName = process.env.GITHUB_REF.replace('refs/heads/', '');
 
-          const embed = new MessageEmbed()
-            .setColor('#0099ff')
-            .setTitle('New Pull Request Created')
-            .setDescription(`A new pull request has been created by ${prData.pull_request.user.login}`)
-            .addField('Title', prData.pull_request.title, true)
-            .addField('Repository', prData.repository.full_name, true)
-            .addField('Branch', prData.pull_request.head.ref, true)
-            .addField('Reviewers', mention, true)
-            .setTimestamp();
+            const embed = new MessageEmbed()
+              .setColor('#0099ff')
+              .setTitle('New Commit')
+              .setDescription(`A new commit has been made to the branch ${branchName} in ${repoName}.`)
+              .addField('Commit', commit, true)
+              .setTimestamp();
 
-          webhook.send({ embeds: [embed] });
+            webhook.send({ embeds: [embed] });
           EOF
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          DISCORD_MENTION: ${{ secrets.DISCORD_MENTION }}
