--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,17 @@ services:
     image: postgres
     volumes:
       - db:/var/lib/postgresql/data
-      - ./db:/docker-entrypoint-initdb.d
     environment:
       POSTGRES_DB: yourdbname
       POSTGRES_USER: youruser
       POSTGRES_PASSWORD: yourpassword
-      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U youruser -d yourdbname" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   django:
     build: ./server
@@ -27,7 +30,8 @@ services:
       - DB_PASSWORD=yourpassword
       - DB_HOST=db
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   react:
     build: ./nextclient
