--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,11 @@
 FROM python:3.8
-WORKDIR /app
-COPY requirements.txt /app/
+RUN pip install --upgrade pip
+
+COPY ./requirements.txt .
 RUN pip install -r requirements.txt
-COPY . /app/
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
+COPY . /app
+WORKDIR /app
+
+COPY ./entrypoint.sh .
+ENTRYPOINT ["sh", "/app/entrypoint.sh"]
